<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.xianfish.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_assistent"
        android:name="com.example.xianfish.ui.Assistant.AssistantFragment"
        android:label="@string/title_assistent"
        tools:layout="@layout/fragment_assistant" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.xianfish.ui.Add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_target"
        android:name="com.example.xianfish.ui.target.TargetFragment"
        android:label="@string/title_target"
        tools:layout="@layout/fragment_target" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.xianfish.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>